syntax = "proto3";

package merchant;

import "commons.proto";
import "branch.proto";
import "group.proto";
import "service.proto";

import "google/protobuf/struct.proto";

service MerchantService {
  rpc find(commons.GqlQuery) returns (FindMerchantsPayload) {}
  rpc findOne(commons.GqlQuery) returns (NullableMerchant) {}
  rpc create(CreateInput) returns (Merchant) {}
  rpc count(commons.GqlQuery) returns (commons.Count) {}
  rpc findById(commons.Id) returns (NullableMerchant) {}

  // branch
  rpc branch(commons.GqlQuery) returns (branch.NullableBranch) {}
  rpc branches(commons.GqlQuery) returns (branch.FindBranchesPayload) {}
  rpc findBranchById(commons.Id) returns (branch.NullableBranch) {}
  rpc createBranch(branch.CreateBranchInput) returns (branch.Branch) {}
  rpc updateBranch(branch.UpdateBranchInput) returns (branch.Branch) {}
  rpc deleteBranch(commons.Id) returns (commons.Count) {}

  // group
  rpc group(commons.GqlQuery) returns (ducph.group.NullableGroup) {}
  rpc groups(commons.GqlQuery) returns (ducph.group.FindGroupsPayload) {}
  rpc findGroupById(commons.Id) returns (ducph.group.NullableGroup) {}
  rpc createGroup(ducph.group.CreateGroupInput) returns (ducph.group.Group) {}
  rpc updateGroup(ducph.group.UpdateGroupInput) returns (ducph.group.Group) {}
  rpc deleteGroup(commons.Id) returns (commons.Count) {}

  // service
  rpc service(commons.GqlQuery) returns (service.NullableService) {}
  rpc services(commons.GqlQuery) returns (service.FindServicesPayload) {}
  rpc findServiceById(commons.Id) returns (service.NullableService) {}
  rpc createService(service.CreateServiceInput) returns (service.Service) {}
  rpc updateService(service.UpdateServiceInput) returns (service.Service) {}
  rpc deleteService(commons.Id) returns (commons.Count) {}
  rpc findServiceOffsetPagination(commons.QueryRequest)
      returns (service.FindServiceOffsetPagination) {}
}

message UpdateMerchantData {
  oneof kind {
    string name = 1;
    string phone = 2;
    string address = 3;
    int32 userId = 4;
    int32 cityCode = 5;
    int32 districtCode = 6;
    int32 wardCode = 7;
    string city = 8;
    string district = 9;
    string ward = 10;
  }
}

message UpdateMerchantInput {
  int32 id = 1;
  UpdateMerchantData data = 2;
}

message CreateInput {
  optional string name = 1;
  optional string phone = 2;
  optional string address = 3;
  optional int32 userId = 4;
  optional int32 cityCode = 5;
  optional int32 districtCode = 6;
  optional int32 wardCode = 7;
  optional string city = 8;
  optional string district = 9;
  optional string ward = 10;
}

message Merchant {
  // default field
  int32 id = 1;
  optional string createdAt = 2;
  optional string updatedAt = 3;
  optional string deletedAt = 4;
  optional string createdBy = 5;
  optional string updatedBy = 6;
  optional string deletedBy = 7;

  // reserved field
  optional string name = 8;
  optional string phone = 9;
  optional string address = 10;
  optional int32 userId = 11;
  optional int32 cityCode = 12;
  optional int32 districtCode = 13;
  optional int32 wardCode = 14;
  optional string city = 15;
  optional string district = 16;
  optional string ward = 17;
}

message MerchantEdge {
  Merchant node = 1;
  string cursor = 2;
}

message FindMerchantsPayload {
  repeated MerchantEdge edges = 1;
  commons.PageInfo pageInfo = 2;
}

message NullableMerchant {
  oneof kind {
    google.protobuf.NullValue null = 1;
    Merchant merchant = 2;
  }
}
